# DeLIA-Hierarchical-Monitoring-Extension

./: README.md  setup_delia.sh
DeLIA-2.0/: CMakeLists.txt  TODO.txt  setup_delia.sh
DeLIA-2.0/src/: ApplicationSettings.cpp  DeLIA.cpp  DeLIAData.h  Utils.cpp  Utils.h
DeLIA-2.0/test/: REMOVELOGS.sh  completion_codes
DeLIA-2.0/test/A_Library/: alltests.sh  output_compile.err  output_compile.out
DeLIA-2.0/test/B_Checkpoint/: alltests.sh  param.json
DeLIA-2.0/test/B_Checkpoint/project/: 01_basic.sh  02_recovery_data.sh  Main.cpp  Settings.cpp  Settings.h  gmon.out  output_basic.err  output_basic.out  output_compile.out  output_withfailure.err  output_withfailure.out
DeLIA-2.0/test/C_FaultDetection/project/: 03_signal_for_all.sh  CMakeLists.txt  LDClass.cpp  Settings.cpp  erroutput.out  output_basic.out  output_compile.out  output_trigger_0.err  output_trigger_0.out  output_trigger_0_comp.out  output_trigger_all.err  output_trigger_all.out  output_trigger_all_comp.err  output_trigger_all_comp.out  output_wf.err  output_wf.out  outputall_wf.err  outputall_wf.out  w_trigger.json  wo_trigger.json
DeLIA-2.0/test/C_FaultDetection/project/DeLIA_lib/include/: IDataGlobal.h
DeLIA_lib/include/: DeLIA.h
include/: IDataLocal.h  IDataSettings.h
libs/jsoncpp/: jsoncpp.cpp
src/: ApplicationSettings.h  Checkpointing.cpp  Checkpointing.h  DeLIA.cpp  FaultDetection.cpp  FaultDetection.h  Utils.cpp  Utils.h
test/: ALLTESTS.sh  fault_codes
test/A_Library/: compile_library.sh  output_compile.out
test/B_Checkpoint/project/: CMakeLists.txt  GDClass.cpp  GDClass.h  Main.cpp  gmon.out  output.out  output_basic.err  output_basic.out  output_compile.out  output_withfailure.err  output_withfailure.out  wfailures.out
test/C_FaultDetection/: alltests.sh
test/C_FaultDetection/project/: 01_basic.sh  02_with_failures.sh  03_signal_for_all.sh  04_signal_for_0.sh  LDClass.h  Main.cpp  erroutput.out  output_basic.err  output_basic.out  output_compile.out  output_trigger_0.err  output_trigger_0.out  output_trigger_0_comp.out  output_trigger_all.err  output_trigger_all.out  output_trigger_all_comp.out  output_wf.err  output_wf.out  outputall_wf.err  outputall_wf.out
